--- a/index.html
+++ b/index.html
@@ -205,7 +205,6 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         
         <div class="flex items-center gap-3">
             <button onclick="toggleLang()" class="flex items-center gap-2 px-4 py-2 rounded-full bg-slate-800/80 hover:bg-slate-700 text-white transition border border-slate-600 shadow-lg shadow-black/20">
-                <span id="langFlag" class="text-base">🇬🇧</span><span id="langText" class="text-xs font-bold hidden sm:inline">EN</span>
             </button>
             <a href="login.html" class="hidden sm:flex items-center gap-2 px-6 py-2.5 bg-gradient-to-r from-indigo-600 via-purple-600 to-orange-500 hover:from-indigo-500 hover:to-orange-400 text-white rounded-full font-bold transition shadow-lg shadow-indigo-500/25 active:scale-95">
                 <span data-i18n="btn_tools">Giriş Yap</span><i data-lucide="arrow-right" class="w-4 h-4"></i>
@@ -383,7 +382,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             nav_tools: "Hesaplama Araçları",
 
             nav_contact: "İletişim", nav_blog: "Blog", nav_social: "Sosyal Medya",
-            btn_tools: "Araçları İncele", hero_badge: "Enerji Verimliliği Hesaplamaları", hero_t1: "Endüstriyel İzolasyon ve", hero_t2: "Enerji Verimliliği.", hero_desc: "Endüstriyel tesislerdeki ısı kayıplarını, verimsiz hatları ve gereksiz maliyetleri mühendislik standartlarıyla analiz eden yeni nesil platform.",
+            btn_tools: "Giriş Yap", hero_badge: "Enerji Verimliliği Hesaplamaları", hero_t1: "Endüstriyel İzolasyon ve", hero_t2: "Enerji Verimliliği.", hero_desc: "Endüstriyel tesislerdeki ısı kayıplarını, verimsiz hatları ve gereksiz maliyetleri mühendislik standartlarıyla analiz eden yeni nesil platform.",
             btn_learn: "Nasıl Çalışır?", sec_vis_title: "Veriyi Sanata Dönüştürün", sec_vis_desc: "Sadece hesaplama yapmayın. Sonuçları görselleştirin, raporlayın ve ikna edin. Karmaşık termal denklemlerin arkasındaki basit gerçeği görün.",
             feat_1_t: "Güvenilir Standartlar", feat_1_d: "Tüm hesaplamalar ISO 12241, ASTM C680 ve VDI 2055 mühendislik normlarına %100 uygun olarak simüle edilir.",
             feat_2_t: "Bulut Tabanlı", feat_2_d: "Kurulum yok, güncelleme derdi yok. Bilgisayar, tablet veya telefonunuzdan anında erişin ve hesaplamaya başlayın.",
@@ -395,23 +394,6 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             mc_loss: "Yıllık Kayıp", mc_status: "Analiz Tamamlandı", mc_pot: "Potansiyel", bdg_co2: "CO2 Azaltımı", bdg_eff: "Verimlilik",
             footer_copy: "&copy; 2025 Optimizi Inc. Tüm hakları saklıdır.", lbl_uninsulated: "Yalıtımsız", lbl_critical: "Kritik", unit_month: "Ay"
         },
-        en: {
-            // YENİ EKLENEN
-            nav_tools: "Calculation Tools",
-
-            nav_contact: "Contact", nav_blog: "Blog", nav_social: "Social Media",
-            btn_tools: "Explore Tools", hero_badge: "Energy Efficiency Calculations", hero_t1: "Make Invisible Losses", hero_t2: "Visible.", hero_desc: "Next-gen platform analyzing heat losses, inefficient lines, and unnecessary costs in industrial facilities with engineering standards.",
-            btn_learn: "How it Works?", sec_vis_title: "Turn Data into Art", sec_vis_desc: "Don't just calculate. Visualize, report, and persuade with results. See the simple truth behind complex thermal equations.",
-            feat_1_t: "Reliable Standards", feat_1_d: "All calculations are simulated 100% compliant with ISO 12241, ASTM C680, and VDI 2055 engineering norms.",
-            feat_2_t: "Cloud Based", feat_2_d: "No installation, no updates. Access instantly from computer, tablet, or phone and start calculating.",
-            feat_3_t: "Privacy Focused", feat_3_d: "Your data is processed in your browser. Sensitive project data is not sent to our servers, it works entirely locally.",
-            cta_title: "Ready to Analyze?", cta_desc: "Discover the potential in your facility using our free tools.", cta_btn: "Go to Tools",
-            lbl_auto: "AUTOMATION", card_pdf_title: "PDF Reporting", card_pdf_desc: "Convert your calculations into corporate reports enriched with visuals in a single click.",
-            card_roi_title: "ROI Calculator", card_roi_desc: "Calculate exactly how many months it will take for your investment to pay off.",
-            card_heat_title: "Heat Loss", card_co2_title: "Carbon Footprint", card_co2_desc: "See how many trees your energy efficiency projects are worth.",
-            mc_loss: "Annual Loss", mc_status: "Analysis Complete", mc_pot: "Potential", bdg_co2: "CO2 Reduction", bdg_eff: "Efficiency",
-            footer_copy: "&copy; 2025 Optimizi Inc. All rights reserved.", lbl_uninsulated: "Uninsulated", lbl_critical: "Critical", unit_month: "Months"
-        }
     };
     
     let currentLang = 'tr';
@@ -438,19 +420,3 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 </script>
 </body>
 </html>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
