--- a/tool/boiler.html
+++ b/tool/boiler.html
@@ -7,6 +7,11 @@
     
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://unpkg.com/lucide@latest"></script>
+    <!-- Supabase JS Library -->
+<script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+
+<!-- Authentication Guard -->
+<script src="/auth-guard.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
     <link rel="icon" href="../favicon.png" type="image/png">
     
@@ -331,3 +336,4 @@
 </body>
 
 </html>
+
