--- a/tool/chiller-roi.html
+++ b/tool/chiller-roi.html
@@ -8,6 +8,11 @@
 <script src="https://cdn.tailwindcss.com"></script>
 <script src="https://unpkg.com/lucide@latest"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/qrcodejs/1.0.0/qrcode.min.js"></script>
+  <!-- Supabase JS Library -->
+<script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+
+<!-- Authentication Guard -->
+<script src="/auth-guard.js"></script>
 <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
 <link rel="icon" href="https://optimizi.app/favicon.png" type="image/png">
 <script>
@@ -844,4 +849,5 @@
   <script src="guard.js?v=2"></script>
 </body>
 </html>
+
 
