--- a/endustriyel-enerji-kaybi-hesaplama.html
+++ b/endustriyel-enerji-kaybi-hesaplama.html
@@ -9,7 +9,11 @@
     <script src="https://unpkg.com/lucide@latest"></script>
     <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
     <link rel="icon" href="favicon.png" type="image/png">
-    
+    <!-- Supabase JS Library -->
+<script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+
+<!-- Authentication Guard -->
+<script src="/auth-guard.js"></script>
     <script>
         tailwind.config = {
             darkMode: 'class',
@@ -403,4 +407,5 @@
     </script>
 </body>
 </html>
+
 
