--- a/tool/boiler.html
+++ b/tool/boiler.html
@@ -14,6 +14,23 @@
 <script src="/auth-guard.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
     <link rel="icon" href="../favicon.png" type="image/png">
+    <!-- AUTH GUARD - Sayfa Koruma -->
+    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+    <script src="/auth-guard.js"></script>
+    
+    <!-- Flash Problemi Çözümü -->
+    <style>
+      body {
+        opacity: 0;
+        visibility: hidden;
+      }
+      body.auth-checked {
+        opacity: 1;
+        visibility: visible;
+        transition: opacity 0.3s ease;
+      }
+    </style>
+</head>
     
     <script>
         tailwind.config = {
@@ -336,4 +353,5 @@
 </body>
 
 </html>
+
 
