--- a/tool/chiller-roi.html
+++ b/tool/chiller-roi.html
@@ -15,6 +15,23 @@
 <script src="/auth-guard.js"></script>
 <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
 <link rel="icon" href="https://optimizi.app/favicon.png" type="image/png">
+  <!-- AUTH GUARD - Sayfa Koruma -->
+    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+    <script src="/auth-guard.js"></script>
+    
+    <!-- Flash Problemi Çözümü -->
+    <style>
+      body {
+        opacity: 0;
+        visibility: hidden;
+      }
+      body.auth-checked {
+        opacity: 1;
+        visibility: visible;
+        transition: opacity 0.3s ease;
+      }
+    </style>
+</head>
 <script>
   tailwind.config = {
     theme: {
@@ -849,5 +866,6 @@
   <script src="guard.js?v=2"></script>
 </body>
 </html>
+
 
 
