--- a/tool/yalitim-performans.html
+++ b/tool/yalitim-performans.html
@@ -8,6 +8,23 @@
 <script src="https://unpkg.com/lucide@latest"></script>
 <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@300;400;500;600;700;800&family=JetBrains+Mono:wght@400;700&display=swap" rel="stylesheet">
 <link rel="icon" href="../favicon.png" type="image/png">
+  <!-- AUTH GUARD - Sayfa Koruma -->
+    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+    <script src="/auth-guard.js"></script>
+    
+    <!-- Flash Problemi Çözümü -->
+    <style>
+      body {
+        opacity: 0;
+        visibility: hidden;
+      }
+      body.auth-checked {
+        opacity: 1;
+        visibility: visible;
+        transition: opacity 0.3s ease;
+      }
+    </style>
+</head>
 <!-- Supabase JS Library -->
 <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 
