--- a/tool/yalitim-performans.html
+++ b/tool/yalitim-performans.html
@@ -210,7 +210,7 @@
     <nav class="sticky top-0 z-50 glass-card !bg-white/95 !border-x-0 !border-t-0 !rounded-none border-b border-slate-200 backdrop-blur-xl">
       <div class="container mx-auto px-6 h-16 flex items-center justify-between max-w-[1400px]">
           <a href="../index.html" class="flex items-center gap-3 group">
-              <div><h1 class="text-lg font-bold text-slate-800 tracking-wide">Optimizi<span class="text-transparent bg-clip-text bg-gradient-to-r from-indigo-500 to-purple-600">.App</span></h1></div>
+              <div><h1 class="text-lg font-bold text-slate-800 tracking-wide">Optimizi<span class="text-transparent bg-clip-text bg-gradient-to-r from-indigo-500 to-purple-600">.Yalıtım Performansı</span></h1></div>
           </a>
           <div class="flex items-center gap-3">
              <div class="text-[10px] font-bold text-slate-500 uppercase tracking-widest bg-slate-100 px-3 py-1.5 rounded-full border border-slate-200" id="stdBadge">
