--- a/tool/roi-2.html
+++ b/tool/roi-2.html
@@ -228,7 +228,7 @@
 <div id="app-layer" class="relative z-10 flex flex-col min-h-screen">
     <nav class="sticky top-0 z-50 glass-card !bg-white dark:bg-slate-800/50/90 dark:!bg-slate-900/40 !border-x-0 !border-t-0 !rounded-none border-b border-slate-200 dark:border-slate-700/50 backdrop-blur-xl">
       <div class="app-container px-6 h-16 flex items-center justify-between">
-          <a href="dashboard.html" class="flex items-center gap-3 group">
+          <a href="#" class="flex items-center gap-3 group">
               <div><h1 class="text-lg font-bold text-slate-800 dark:text-slate-100 dark:text-slate-100 tracking-wide">Optimizi<span class="text-transparent bg-clip-text bg-gradient-to-r from-indigo-500 to-orange-500">.Roi</span></h1></div>
           </a>
           <div class="flex items-center gap-3">
@@ -2471,4 +2471,5 @@
 </script>
 </body>
 </html>
+
 
