--- a/dashboard.html
+++ b/dashboard.html
@@ -148,7 +148,7 @@
       <div class="flex-1 overflow-y-auto py-6 px-4 space-y-1">
           <div class="text-xs font-bold text-slate-400 dark:text-slate-500 uppercase tracking-wider px-4 mb-2">Genel</div>
           <a href="#" class="sidebar-link active"><i data-lucide="layout-dashboard"></i> Panel</a>
-          <a href="#" class="sidebar-link"><i data-lucide="folder-open"></i> Projelerim</a>
+          <a href="projelerim.html" class="sidebar-link"><i data-lucide="folder-open"></i> Projelerim</a>
           
           <div class="text-xs font-bold text-slate-400 dark:text-slate-500 uppercase tracking-wider px-4 mb-2 mt-6">Ticari İşlemler</div>
           <a href="#" onclick="showNotification('Bilgi', 'Fiyat teklifi modülü yakında aktif olacak.', 'info')" class="sidebar-link text-indigo-600 dark:text-indigo-400 hover:bg-indigo-50 dark:hover:bg-indigo-900/20"><i data-lucide="file-plus"></i> Fiyat Teklifi Ver</a>
