--- a/tool/roi.html
+++ b/tool/roi.html
@@ -6,7 +6,7 @@
 <title>Endüstriyel İzolasyon Yatırımı Amortisman Hesaplama</title>
 <meta name="description" content="ISO 12241 standardına göre boru, vana ve tank yüzeylerinden ısı kaybını hesaplayın.">
 
-<link rel="icon" type="image/png" href="favicon.png">
+  <link rel="icon" type="image/png" sizes="192x192" href="/favicon.png">
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
     <script src="/auth-guard.js"></script>
     
@@ -2731,5 +2731,6 @@ async function saveCalculation() {
 </script>
 </body>
 </html>
+
 
 
