--- a/tool/yalitim-performans.html
+++ b/tool/yalitim-performans.html
@@ -221,9 +221,9 @@
                 <i data-lucide="printer" class="w-3 h-3"></i> Rapor Al
              </button>
 
-             <button onclick="ToDB()" class="text-xs bg-slate-900 text-white px-4 py-2 rounded-lg font-bold hover:bg-slate-800 transition shadow-lg shadow-slate-200 flex items-center gap-2 cursor-pointer">
-                 <i data-lucide="save" class="w-3 h-3"></i> Kaydet
-             </button>
+            <button onclick="saveProjectToDB()" class="text-xs bg-slate-900 text-white px-4 py-2 rounded-lg font-bold hover:bg-slate-800 transition shadow-lg shadow-slate-200 flex items-center gap-2 cursor-pointer">
+    <i data-lucide="save" class="w-3 h-3"></i> Kaydet
+</button>
           </div>
       </div>
     </nav>
