--- a/sayacyonetim.html
+++ b/sayacyonetim.html
@@ -9,7 +9,7 @@
     <script src="https://unpkg.com/lucide@latest"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/qrcodejs/1.0.0/qrcode.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
-
+<link rel="icon" type="image/png" sizes="192x192" href="/favicon.png">
     <script>
         tailwind.config = {
             theme: {
