--- a/projelerim.html
+++ b/projelerim.html
@@ -217,6 +217,7 @@
                   <div class="submenu-item"><a href="tool/yogusma-hesaplama.html" class="submenu-link">Yoğuşma Kontrol</a></div>
                   <div class="submenu-item"><a href="tool/chiller-roi.html" class="submenu-link">Chiller ROI</a></div>
                   <div class="submenu-item"><a href="tool/boiler.html" class="submenu-link">Kazan Verimliliği</a></div>
+                  <div class="submenu-item"><a href="./qryonetim.html" class="submenu-link">QR Oluşturucu</a></div>
               </div>
           </div>
 
