--- a/qrtakip.html
+++ b/qrtakip.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>Optimizi - Anlık Kayıp Sayacı</title>
+    <title>Anlık Kayıp Sayacı</title>
     <link rel="icon" href="favicon.png" type="image/png">
     
     <script src="https://cdn.tailwindcss.com"></script>
