--- a/dashboard.html
+++ b/dashboard.html
@@ -4,13 +4,9 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Yönetim Paneli</title>
-  
-  <!-- Supabase - SADECE BİR KEZ -->
+
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
-  
-  <!-- AUTH GUARD - Supabase'den HEMEN SONRA -->
-  <script src="auth-guard.js"></script>
-  
+<script src="auth.js"></script>
   <script src="https://cdn.tailwindcss.com"></script>
   <script src="https://unpkg.com/lucide@latest"></script>
   <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
@@ -499,8 +495,6 @@
   </div>
 
   <script>
-    // SUPABASE CLIENT - auth-guard.js'den geliyor, tekrar tanımlamaya gerek YOK
-    // window.supabaseClient zaten mevcut
     
     let isSidebarCollapsed = false;
     let currentUser = null;
