--- a/tool/chiller-roi.html
+++ b/tool/chiller-roi.html
@@ -12,12 +12,9 @@
 <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 
 <!-- Authentication Guard -->
-<script src="/auth-guard.js"></script>
-<link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
+<script src="auth.js"></script>
+  <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
 <link rel="icon" href="https://optimizi.app/favicon.png" type="image/png">
-  <!-- AUTH GUARD - Sayfa Koruma -->
-    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
-    <script src="/auth-guard.js"></script>
     
     <!-- Flash Problemi Çözümü -->
     <style>
@@ -866,6 +863,7 @@
   <script src="guard.js?v=2"></script>
 </body>
 </html>
+
 
 
 
