--- a/tool/anlik-kayip.html
+++ b/tool/anlik-kayip.html
@@ -7,17 +7,13 @@
 <meta name="description" content="İşletmenizdeki yalıtımsız yüzeylerden kaynaklanan yıllık finansal kaybı hesaplayın.">
 <script src="https://cdn.tailwindcss.com"></script>
 <script src="https://unpkg.com/lucide@latest"></script>
-  <!-- Supabase JS Library -->
+ 
 <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
-
-<!-- Authentication Guard -->
-<script src="/auth-guard.js"></script>
+<script src="auth.js"></script>
+  
 <script src="https://cdnjs.cloudflare.com/ajax/libs/qrcodejs/1.0.0/qrcode.min.js"></script>
 <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
 <link rel="icon" href="../favicon.png" type="image/png">
-  <!-- AUTH GUARD - Sayfa Koruma -->
-    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
-    <script src="/auth-guard.js"></script>
     
     <!-- Flash Problemi Çözümü -->
     <style>
@@ -1575,3 +1571,4 @@
 </script>
 </body>
 </html>
+
