--- a/tool/roi.html
+++ b/tool/roi.html
@@ -8,7 +8,7 @@
 
   <link rel="icon" type="image/png" sizes="192x192" href="/favicon.png">
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
-    <script src="/auth-guard.js"></script>
+  <script src="auth.js"></script>
     
     <style>
       body:not(.auth-checked) {
@@ -2800,5 +2800,6 @@ async function saveCalculation() {
 </script>
 </body>
 </html>
+
 
 
