--- a/tool/anlik-kayip.html
+++ b/tool/anlik-kayip.html
@@ -9,7 +9,7 @@
 <script src="https://unpkg.com/lucide@latest"></script>
  
 <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
-<script src="auth.js"></script>
+<script src="../auth.js"></script>
   
 <script src="https://cdnjs.cloudflare.com/ajax/libs/qrcodejs/1.0.0/qrcode.min.js"></script>
 <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
@@ -1559,5 +1559,6 @@
 </script>
 </body>
 </html>
+
 
 
