--- a/tool/yalitim-performans.html
+++ b/tool/yalitim-performans.html
@@ -10,14 +10,7 @@
 <link rel="icon" href="../favicon.png" type="image/png">
 
 <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
-<script src="/auth-guard.js"></script> 
-<style>
-  body:not(.auth-checked) { opacity: 0; visibility: hidden; }
-  body.auth-checked { opacity: 1; visibility: visible; transition: opacity 0.3s ease; }
-</style>
-<script>
-  setTimeout(function(){ if(document.body) document.body.classList.add('auth-checked'); }, 500);
-</script>
+<script src="../auth.js"></script>
 
 <script>
   tailwind.config = {
