--- a/tool/roi.html
+++ b/tool/roi.html
@@ -4,6 +4,18 @@
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
 <title>Endüstriyel İzolasyon Yatırımı Amortisman Hesaplama</title>
+  <style>
+  /* Auth kontrolü yapılana kadar sayfa gizli */
+  body:not(.auth-checked) {
+    opacity: 0;
+    pointer-events: none;
+  }
+  
+  body.auth-checked {
+    opacity: 1;
+    transition: opacity 0.3s ease;
+  }
+</style>
 <meta name="description" content="ISO 12241 standardına göre boru, vana ve tank yüzeylerinden ısı kaybını hesaplayın.">
 
   <link rel="icon" type="image/png" sizes="192x192" href="/favicon.png">
@@ -2800,6 +2812,7 @@ async function saveCalculation() {
 </script>
 </body>
 </html>
+
 
 
 
