--- a/tool/chiller-roi.html
+++ b/tool/chiller-roi.html
@@ -12,7 +12,7 @@
 <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 
 <!-- Authentication Guard -->
-<script src="auth.js"></script>
+<script src="../auth.js"></script>
   <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
 <link rel="icon" href="https://optimizi.app/favicon.png" type="image/png">
     
@@ -1214,3 +1214,4 @@
   <script src="guard.js?v=2"></script>
 </body>
 </html>
+
