--- a/login.html
+++ b/login.html
@@ -127,10 +127,11 @@
   <div class="relative z-10 w-full max-w-md px-6">
     
     <div class="flex flex-col items-center mb-12">
-        <div class="text-center">
-            <div class="font-black text-4xl lg:text-5xl tracking-tighter text-white">
-                Optimizi<span class="text-transparent bg-clip-text bg-gradient-to-r from-indigo-400 to-orange-400">.App</span>
-            </div>
+       <a href="index.html" class="inline-block hover:opacity-90 transition-opacity">
+    <div class="font-black text-4xl lg:text-5xl tracking-tighter text-white">
+        Optimizi<span class="text-transparent bg-clip-text bg-gradient-to-r from-indigo-400 to-orange-400">.App</span>
+    </div>
+</a>
             <div class="flex items-center justify-center gap-2 mt-4">
                 <span class="h-px w-8 bg-gradient-to-r from-transparent to-slate-600"></span>
                 <p class="text-slate-400 text-[11px] font-bold uppercase tracking-[0.3em]">Yönetim Paneli</p>
