--- a/projelerim.html
+++ b/projelerim.html
@@ -197,7 +197,8 @@
               </button>
               <div id="prodMenu" class="submenu">
                   <div class="submenu-item group/item"><a href="#" onclick="showNotification('Bilgi', 'Üretim Takibi yakında.', 'info')" class="submenu-link">Üretim Takibi</a></div>
-                  <div class="submenu-item group/item"><a href="#" onclick="toggleSubmenu('stockSubMenu', this.parentElement); return false;" class="submenu-link justify-between">Stok Durumu <i data-lucide="chevron-down" class="w-3 h-3 opacity-50"></i></a></div>
+                 <div class="submenu-item group/item"><a href="#" onclick="showNotification('Bilgi', 'Üretim Raporları yakında.', 'info')" class="submenu-link">Üretim Raporları</a></div>
+                <div class="submenu-item group/item"><a href="#" onclick="toggleSubmenu('stockSubMenu', this.parentElement); return false;" class="submenu-link justify-between">Stok Durumu <i data-lucide="chevron-down" class="w-3 h-3 opacity-50"></i></a></div>
                   <div id="stockSubMenu" class="submenu pl-2 border-l border-slate-200 dark:border-slate-700 ml-4">
                       <div class="submenu-item group/item"><a href="#" onclick="quickAction('stockIn')" class="submenu-link text-[11px]">- Hammadde Girdisi</a></div>
                       <div class="submenu-item group/item"><a href="#" onclick="quickAction('stockOut')" class="submenu-link text-[11px]">- Hammadde Çıktısı</a></div>
@@ -230,7 +231,6 @@
               </button>
               <div id="adminMenu" class="submenu">
                   <div class="submenu-item"><a href="#" onclick="checkAdminAccess()" class="submenu-link">Şirket Raporları</a></div>
-                  <div class="submenu-item"><a href="#" onclick="checkAdminAccess()" class="submenu-link">Üretim Raporları</a></div>
                   <div class="submenu-item"><a href="#" onclick="checkAdminAccess()" class="submenu-link">Nakit Akış</a></div>
                   <div class="submenu-item"><a href="#" onclick="checkAdminAccess()" class="submenu-link">Personel Yönetimi</a></div>
               </div>
