--- a/projelerim.html
+++ b/projelerim.html
@@ -467,6 +467,18 @@
     let isSidebarCollapsed = false;
     let currentUser = null; 
 
+    // Hesaplama tipine göre doğru araç URL'sini döndür
+    function getToolUrl(proj) {
+        const urlMap = {
+            'roi': 'tool/roi.html',
+            'chiller-roi': 'tool/chiller-roi.html',
+            'anlik-kayip': 'tool/anlik-kayip.html',
+            'isolation': 'tool/yalitim-performans.html',
+            'condensation': 'tool/yogusma-hesaplama.html'
+        };
+        return urlMap[proj.calculation_type] || 'tool/roi.html';
+    }
+
     // --- SIDEBAR & MENU LOGIC ---
     function toggleSidebar() {
         const sidebar = document.getElementById('mainSidebar');
@@ -698,7 +710,7 @@
                 const div = document.createElement('div');
                 div.className = 'p-3 border-b border-slate-100 dark:border-slate-800 hover:bg-slate-50 dark:hover:bg-slate-800/50 transition flex items-center justify-between gap-3';
                 div.innerHTML = `
-                    <div class="flex items-center gap-3 cursor-pointer flex-1" onclick="window.location.href='tool/roi.html?load_id=${p.id}'">
+                    <div class="flex items-center gap-3 cursor-pointer flex-1" onclick="window.location.href='${getToolUrl(p)}?load_id=${p.id}'">
                         <div class="bg-indigo-100 dark:bg-indigo-900/30 text-indigo-600 dark:text-indigo-400 p-2 rounded-lg shrink-0"><i data-lucide="clock" class="w-4 h-4"></i></div>
                         <div><div class="text-sm font-bold text-slate-800 dark:text-slate-200 line-clamp-1">${p.client_name || p.project_name || 'İsimsiz'}</div><div class="text-xs text-slate-500">Zamanı geldi!</div><div class="text-[10px] text-slate-400 mt-1">${dateStr}</div></div>
                     </div>
@@ -773,6 +785,7 @@
             let typeLabel = 'Diğer', typeIcon = 'file', toolUrl = '#', colorClass = 'text-slate-500 bg-slate-100 dark:bg-slate-800';
 
             if (proj.calculation_type === 'roi') { typeLabel = 'Termal ROI'; typeIcon = 'flame'; toolUrl = 'tool/roi.html'; colorClass = 'text-orange-600 bg-orange-100 dark:bg-orange-900/20 dark:text-orange-400'; }
+            else if (proj.calculation_type === 'chiller-roi') { typeLabel = 'Chiller ROI'; typeIcon = 'snowflake'; toolUrl = 'tool/chiller-roi.html'; colorClass = 'text-cyan-600 bg-cyan-100 dark:bg-cyan-900/20 dark:text-cyan-400'; }
             else if (proj.calculation_type === 'isolation') { typeLabel = 'Yalıtım Perf.'; typeIcon = 'layers'; toolUrl = 'tool/yalitim-performans.html'; colorClass = 'text-purple-600 bg-purple-100 dark:bg-purple-900/20 dark:text-purple-400'; }
             else if (proj.calculation_type === 'condensation') { typeLabel = 'Yoğuşma'; typeIcon = 'droplets'; toolUrl = 'tool/yogusma-hesaplama.html'; colorClass = 'text-blue-600 bg-blue-100 dark:bg-blue-900/20 dark:text-blue-400'; }
             else if (proj.calculation_type === 'anlik-kayip') { typeLabel = 'Saha Kayıp'; typeIcon = 'scan-line'; toolUrl = 'tool/anlik-kayip.html'; colorClass = 'text-red-600 bg-red-100 dark:bg-red-900/20 dark:text-red-400'; }
