--- a/tool/anlik-kayip.html
+++ b/tool/anlik-kayip.html
@@ -1504,7 +1504,7 @@
                 .replace('{{temp}}', tAmb)
                 .replace('{{wind}}', vWind)
                 .replace('{{eff}}', eff)
-                .replace('{{hours}}', hours);
+                .replace('{{hours}}', wHours);
             document.getElementById('covNarrative').innerHTML = narrative;
 
             document.getElementById('sumLoss').innerText = currSym + Math.round(gLoss).toLocaleString();
