--- a/tool/anlik-kayip.html
+++ b/tool/anlik-kayip.html
@@ -161,7 +161,7 @@
 <div id="app-layer" class="relative z-10 flex flex-col min-h-screen">
     <nav class="sticky top-0 z-50 glass-card !bg-white/90 dark:!bg-slate-900/80 !border-x-0 !border-t-0 !rounded-none border-b border-slate-200 dark:border-white/10 backdrop-blur-xl">
       <div class="app-container px-6 h-16 flex items-center justify-between">
-          <a href="dashboard.html" class="flex items-center gap-3 group cursor-pointer hover:opacity-80 transition">
+          <a href="../dashboard.html" class="flex items-center gap-3 group cursor-pointer hover:opacity-80 transition">
               <div><h1 class="text-lg font-bold text-slate-800 dark:text-white tracking-wide">Optimizi<span class="text-transparent bg-clip-text bg-gradient-to-r from-red-500 to-orange-500">.Anlık Kayıp</span></h1></div>
           </a>
           <div class="flex items-center gap-3">
@@ -1652,3 +1652,4 @@
 </script>
 </body>
 </html>
+
