--- a/dashboard.html
+++ b/dashboard.html
@@ -164,9 +164,11 @@
 
   <aside id="mainSidebar" class="w-64 h-full glass-panel flex flex-col z-20 hidden md:flex border-r border-slate-200 dark:border-slate-700/50 bg-white/50 dark:bg-slate-900/50 transition-all duration-300">
       <div class="h-20 flex items-center justify-between px-6 border-b border-slate-200 dark:border-white/5">
-          <div class="flex items-center gap-2 overflow-hidden logo-text">
-              <span class="text-lg font-bold text-slate-800 dark:text-white tracking-tight">Optimizi<span class="text-indigo-500 dark:text-indigo-400">.App</span></span>
-          </div>
+         <a href="../dashboard.html" class="flex items-center gap-2 overflow-hidden logo-text hover:opacity-80 transition-opacity duration-200 cursor-pointer">
+    <span class="text-lg font-bold text-slate-800 dark:text-white tracking-tight">
+        Optimizi<span class="text-indigo-500 dark:text-indigo-400">.App</span>
+    </span>
+</a>
           <button onclick="toggleSidebar()" class="text-slate-400 hover:text-indigo-600 transition"><i data-lucide="panel-left" class="w-5 h-5"></i></button>
       </div>
 
