--- a/tool/anlik-kayip.html
+++ b/tool/anlik-kayip.html
@@ -564,7 +564,7 @@
          </div>
 
         <div class="border-t-2 border-slate-100 pt-4 mt-auto">
-            <p class="text-[10px] text-slate-400 text-center font-medium leading-relaxed" id="sumNote">Bu raporda yer alan tüm hesaplamalar ISO 12241 mühendislik standartlarına göre, ölçülen yüzey sıcaklıkları ve verilen parametreler baz alınarak bilgisayar simülasyonu ile yapılmıştır. Sonuçlar teorik değerleri yansıtmakta olup, fiili koşullardaki sapmalara bağlı olarak değişiklik gösterebilir. Bu rapor garanti niteliği taşımamaktadır.</p>
+            <p class="text-[10px] text-slate-400 text-center font-medium leading-relaxed" id="sumNote">Bu raporda yer alan tüm hesaplamalar ISO 12241 mühendislik standartlarına göre, ölçülen yüzey sıcaklıkları ve verilen parametreler baz alınarak bilgisayar simülasyonu ile yapılmıştır. Sonuçlar teorik değerleri yansıtmakta olup, fiili koşullardaki sapmalara bağlı olarak değişiklik gösterebilir.</p>
         </div>
     </div>
 </div>
@@ -1652,4 +1652,5 @@
 </script>
 </body>
 </html>
+
 
