--- a/projelerim.html
+++ b/projelerim.html
@@ -11,6 +11,20 @@
   <script src="https://unpkg.com/lucide@latest"></script>
   <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
   <link rel="icon" type="image/png" sizes="192x192" href="/favicon.png">
+
+ <style>
+  /* Auth kontrolü yapılana kadar sayfa gizli */
+  body:not(.auth-checked) {
+    opacity: 0;
+    pointer-events: none;
+  }
+  
+  body.auth-checked {
+    opacity: 1;
+    transition: opacity 0.3s ease;
+  }
+</style>
+
   <script>
     tailwind.config = {
       darkMode: 'class',
