--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
 <title>Enerji Verimliliği Hesaplamaları</title>
-  <meta name="description" content="Endüstriyel enerji verimliliği hesaplama platformu. Basınçlı hava kaçağı, yalıtım ROI ve ekonomik kalınlık hesaplamalarını saniyeler içinde yapın, profesyonel rapor alın.">
+  <meta name="description" content="Endüstriyel enerji verimliliği hesaplama platformu. Yalıtım ROI ve ekonomik kalınlık hesaplamalarını saniyeler içinde yapın, profesyonel rapor alın.">
 <meta name="keywords" content="enerji verimliliği, mühendislik hesaplamaları, hava kaçağı hesabı, yalıtım roi, enerji tasarrufu, iso 1217, cagi, vdi 2055">
 <meta name="author" content="Optimizi.App">
 
@@ -467,3 +467,4 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 </script>
 </body>
 </html>
+
