--- a/teklif-yonetimi.html
+++ b/teklif-yonetimi.html
@@ -67,53 +67,8 @@
   </div>
 
   <!-- SIDEBAR -->
-  <aside id="mainSidebar" class="w-64 h-full glass-panel flex flex-col z-20 hidden md:flex border-r border-slate-200 dark:border-slate-700/50 bg-white/50 dark:bg-slate-900/50 transition-all duration-300">
-    <div class="h-20 flex items-center justify-between px-6 border-b border-slate-200 dark:border-white/5">
-      <a href="dashboard.html" class="flex items-center gap-2 overflow-hidden logo-text hover:opacity-80 transition-opacity duration-200 cursor-pointer"><span class="text-lg font-bold text-slate-800 dark:text-white tracking-tight">Optimizi<span class="text-indigo-500 dark:text-indigo-400">.App</span></span></a>
-      <button onclick="toggleSidebar()" class="text-slate-400 hover:text-indigo-600 transition"><i data-lucide="panel-left" class="w-5 h-5"></i></button>
-    </div>
-    <div class="flex-1 overflow-y-auto py-6 px-4 custom-scroll">
-      <div class="text-xs font-bold text-slate-400 dark:text-slate-500 uppercase tracking-wider px-4 mb-2 sidebar-title">Genel</div>
-      <a href="dashboard.html" class="sidebar-link"><i data-lucide="layout-dashboard"></i> <span>Proje Panel</span></a>
-      <a href="projelerim.html" class="sidebar-link"><i data-lucide="folder-open"></i> <span>Projelerim</span></a>
-      <div class="mt-6">
-        <button onclick="toggleSubmenu('offerMenu', this)" class="sidebar-link active justify-between group">
-          <div class="flex items-center gap-3"><i data-lucide="file-text"></i> <span>Teklif Yönetimi</span></div>
-          <i data-lucide="chevron-down" class="w-4 h-4 transition-transform duration-300 text-slate-400 chevron" style="transform:rotate(180deg)"></i>
-        </button>
-        <div id="offerMenu" class="submenu open">
-          <div class="submenu-item group/item"><a href="#" onclick="switchTab('customers');return false" class="submenu-link">Müşteri Listesi</a><button onclick="openNewClientModal()" class="quick-action-btn" title="Yeni Müşteri"><i data-lucide="plus" class="w-3.5 h-3.5"></i></button></div>
-          <div class="submenu-item group/item"><a href="#" onclick="switchTab('proposals');return false" class="submenu-link">Teklif Geçmişi</a><button onclick="openNewProposalModal()" class="quick-action-btn" title="Yeni Teklif"><i data-lucide="plus" class="w-3.5 h-3.5"></i></button></div>
-          <div class="submenu-item group/item"><a href="#" onclick="switchTab('quick');return false" class="submenu-link">Hızlı Teklif Ver</a></div>
-          <div class="submenu-item group/item"><a href="#" onclick="switchTab('templates');return false" class="submenu-link">Teklif Şablonları</a></div>
-        </div>
-      </div>
-      <div class="mt-1">
-        <button onclick="toggleSubmenu('toolsMenu', this)" class="sidebar-link justify-between group">
-          <div class="flex items-center gap-3"><i data-lucide="calculator"></i> <span>Araçlar</span></div>
-          <i data-lucide="chevron-down" class="w-4 h-4 transition-transform duration-300 text-slate-400 chevron"></i>
-        </button>
-        <div id="toolsMenu" class="submenu">
-          <div class="submenu-item"><a href="tool/anlik-kayip.html" class="submenu-link">Saha Kayıp Analizi</a></div>
-          <div class="submenu-item"><a href="tool/roi.html" class="submenu-link">Termal ROI</a></div>
-          <div class="submenu-item"><a href="tool/yalitim-performans.html" class="submenu-link">Optimum Kalınlık</a></div>
-          <div class="submenu-item"><a href="tool/yogusma-hesaplama.html" class="submenu-link">Yoğuşma Kontrol</a></div>
-          <div class="submenu-item"><a href="tool/chiller-roi.html" class="submenu-link">Chiller ROI</a></div>
-          <div class="submenu-item"><a href="tool/boiler.html" class="submenu-link">Kazan Verimliliği</a></div>
-        </div>
-      </div>
-      <div class="text-xs font-bold text-slate-400 dark:text-slate-500 uppercase tracking-wider px-4 mb-2 mt-6 sidebar-title">Sistem</div>
-      <button onclick="openSettings()" class="sidebar-link"><i data-lucide="settings"></i> <span>Ayarlar</span></button>
-      <a href="iletisim.html" class="sidebar-link"><i data-lucide="life-buoy"></i> <span>Destek</span></a>
-    </div>
-    <div class="p-4 border-t border-slate-200 dark:border-white/5">
-      <div onclick="openSettings()" class="flex items-center gap-3 p-2 rounded-xl hover:bg-slate-200/50 dark:hover:bg-white/10 transition cursor-pointer group">
-        <div class="w-10 h-10 rounded-full bg-gradient-to-r from-blue-500 to-indigo-500 flex items-center justify-center text-white font-bold text-sm shadow-lg group-hover:scale-105 transition shrink-0" id="avatarInitial">U</div>
-        <div class="flex-1 min-w-0 user-info"><p class="text-sm font-bold text-slate-800 dark:text-white truncate" id="sidebarUserName">Yükleniyor...</p><p class="text-xs text-slate-500 dark:text-slate-400 truncate">Hesap Ayarları</p></div>
-        <i data-lucide="chevron-right" class="w-4 h-4 text-slate-400 chevron"></i>
-      </div>
-    </div>
-  </aside>
+    <aside id="mainSidebar"></aside>
+  <script src="sidebar.js"></script>
 
   <!-- MAIN CONTENT -->
   <main class="flex-1 flex flex-col h-full relative z-10 overflow-hidden bg-slate-50/50 dark:bg-transparent transition-all duration-300">
@@ -381,8 +336,8 @@
     function generateProposalNo(){const d=new Date();return'TKL-'+d.getFullYear()+String(d.getMonth()+1).padStart(2,'0')+'-'+String(Math.floor(Math.random()*9000)+1000)}
 
     // UI Helpers
-    function toggleSidebar(){isSidebarCollapsed=!isSidebarCollapsed;document.getElementById('mainSidebar').classList.toggle('collapsed')}
-    function toggleSubmenu(id,btn){if(isSidebarCollapsed)return;const m=document.getElementById(id),ic=btn.querySelector('.chevron');if(m.classList.contains('open')){m.classList.remove('open');if(ic)ic.style.transform='rotate(0deg)'}else{m.classList.add('open');if(ic)ic.style.transform='rotate(180deg)'}}
+    // toggleSidebar from sidebar.js
+    // toggleSubmenu from sidebar.jselse{m.classList.add('open');if(ic)ic.style.transform='rotate(180deg)'}}
     function toggleNotifDropdown(){document.getElementById('notifDropdown').classList.toggle('hidden')}
     function openSettings(){document.getElementById('settingsModal').classList.remove('hidden');lucide.createIcons()}
     function closeSettings(){document.getElementById('settingsModal').classList.add('hidden')}
